// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should transform json as json 1`] = `
Object {
  "data": Object {
    "somedata": "Normal version",
    "test": "a",
    "test2": "b",
  },
  "partial": Object {
    "somedata": "Normal version",
    "test": "a",
    "test2": "b",
    "title": "file.json",
  },
}
`;

exports[`should transform json as json and support partial 1`] = `
Object {
  "data": Object {
    "partial": Object {
      "somedata": "Light version",
    },
    "somedata": "Normal version",
    "test": "a",
    "test2": "b",
  },
  "partial": Object {
    "somedata": "Light version",
    "title": "file.json",
  },
}
`;
